--- a/rwt_image_view/www/index.html
+++ b/rwt_image_view/www/index.html
@@ -22,6 +22,8 @@
           </div>
           <button type="submit" class="btn btn-primary">view</button>
           <button type="button" id="record-button" class="btn btn-success">record</button>
+          <button type="button" id="larm-button" class="btn btn-success">larm</button>
+          <button type="button" id="rarm-button" class="btn btn-success">rarm</button>
         </form>
         
       </div>
@@ -39,6 +41,13 @@
     <script type="text/javascript" src="../rwt_utils_3rdparty/rwt_utils.js"></script>
     <script type="text/javascript" src="js/rwt_image_view_main.js"></script>
 
+    <html>
+      <body>
+	<input type="button" value="ボタン" onclick="this.value='ss'" onmouseover="this.value='マウスオaーバー'" onmouseout="this.value='マウスアウト'">
+      </body>
+    </html>
+
+    
   </body>
 </html>
 
