--- a/rwt_image_view/www/index.html
+++ b/rwt_image_view/www/index.html
@@ -21,8 +21,14 @@
           </div>
           <button type="submit" class="btn btn-primary">view</button>
           <button type="button" id="record-button" class="btn btn-success">record</button>
-          <button type="button" id="larm-button" class="btn btn-success">larm ramdom</button>
-          <button type="button" id="rarm-button" class="btn btn-success">rarm ramdom</button>
+          <!-- <button type="button" id="larm-button" class="btn btn-success">larm ramdom</button> -->
+          <!-- <button type="button" id="rarm-button" class="btn btn-success">rarm ramdom</button> -->
+          <button type="button" id="movebase-f-button" class="btn btn-success">F</button>
+          <button type="button" id="movebase-b-button" class="btn btn-success">B</button>
+          <button type="button" id="movebase-l-button" class="btn btn-success">L</button>
+          <button type="button" id="movebase-r-button" class="btn btn-success">R</button>
+          <button type="button" id="movebase-yaw-button" class="btn btn-success">180rot</button>
+          <button type="button" id="reset-sim-button" class="btn btn-success">reset-sim</button>
         </form>
       </div>
       <!-- <div class="row"> -->
