--- a/rwt_image_view/www/index.html
+++ b/rwt_image_view/www/index.html
@@ -36,6 +36,7 @@
     <div id="debug-text-area1">text1</div>
     <div id="debug-text-area2">text2</div>
     <div id="debug-text-area3">text3</div>
+    <div id="debug-text-area4">text4</div>
     
     <script type="text/javascript" src="../rwt_utils_3rdparty/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="3rdparty/ros/js/eventemitter2.js"></script>
