use operator_view, ROS_IP, reset_pose

--- a/rwt_image_view/www/index.html
+++ b/rwt_image_view/www/index.html
@@ -180,6 +180,7 @@
           <button type="button" style="width:100%;" id="b_basepos_-z" class="btn btn-primary">Down  </button>
         </div>
         <div style="clear:both;"></div>
+	<button type="button" style="width:30%;" id="x_resetpose" class="btn btn-primary">Reset Pose</button><br>
       </div>
 
     </div>
